Fix the card layout issue

--- a/src/App.css
+++ b/src/App.css
@@ -151,3 +151,11 @@ margin-left: 21rem;
 #move{
  margin-left:16rem;
 }
+#car{
+  width: 15rem;
+  height: 12rem;
+}
+#ed{
+  width: 15rem;
+  margin-left: 4rem;
+}
